--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/header.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/getstarted/header.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>${pageTitle}</title>
+    <title>${User} Books</title>
     
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">${pageTitle}</a>
+            <a class="navbar-brand" href="#">${User} Books</a>
           </div>
           
           <div class="collapse navbar-collapse" id="navbar-collapse">
