--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.editor.orion/resources/editor.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.editor.orion/resources/editor.html
@@ -51,7 +51,7 @@
 			function createEditor(content, contentType, readOnlyStatus, breakpointsEnabledStatus, row) {
 				setBreakpointsEnabled(breakpointsEnabledStatus);
 				require.config({waitSeconds: 0});
-			    require(["code_edit/built-codeEdit", "orion/keyBinding"], function(widget, mKeyBinding) {
+			    require(["code_edit/built-codeEdit.min", "orion/keyBinding"], function(widget, mKeyBinding) {
 			        var codeEdit = new widget();
 			        codeEdit.create({parent: "embeddedEditor", contentType: contentType, contents: content})
 			            .then(function(editorViewer) {
