--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="images/favicon.png">
 
-  <title>Dirigible</title>
+  <title>Eclipse Dirigible | Cloud Development Platform</title>
 
   <link href="styles/default/bootstrap.min.css" rel="stylesheet">
   <link href="styles/font-awesome.min.css" rel="stylesheet">
@@ -105,7 +105,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Dirigible</a>
+        <a class="navbar-brand" href="#">Eclipse Dirigible <sup>&trade;</sup></a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -156,10 +156,7 @@
 	  
 	  <div class="container">
 	    <hr>
-	    <p class="text-muted credit">
-	      Copyright &copy; 2010-2016 Eclipse Foundation, Licensed under the
-	      <a href='https://www.eclipse.org/legal/epl-v10.html' target='_blank'>Eclipse Public License - v 1.0</a>
-	    </p>
+	    <p class="copyright text-muted small">Copyright &copy; 2010-2016 Eclipse Foundation, Inc. All Rights Reserved. Eclipse is a registered trademark of the Eclipse Foundation, Inc. Dirigible is a trademark of the Eclipse Foundation, Inc.</p>
 	  </div>
 	</div>	
   
