--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Instant Access</title>
+	<title>Eclipse Dirigible | Trial Instance</title>
 	<link rel="stylesheet" href="styles/default/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/anonymous.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -11,8 +11,8 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-4 col-md-offset-4">
 					<h1 class="text-center login-title">Anonymous Access</h1>
-					<p>Choose a name you like to be used for the instant trial access. It must be at least three characters long and must contain only latin letters and underscore character.
-						It will be kept in a cookie for later use for your convenience.
+					<p>Enter an username to test Eclipse Dirigible in a shared mode instance. You can use the same username to access your projects later on.
+						It must be at least three characters long and must contain only Latin letters, numbers and underscore character.
 					</p>
 					<div class="account-wall">
 						<img class="logo-img" src="images/dirigible_logo.svg" alt="">
