--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/anonymous.html
@@ -20,7 +20,7 @@
 						<input id="username" type="text" name="user" class="form-control" placeholder="Username" required autofocus pattern="[A-Za-z0-9_]{3,64}">
 						<input id="redirect" type="hidden" name="redirect" value="true">
 						<input id="git" type="hidden" name="git" value="">
-						<button class="btn btn-lg btn-primary btn-block" type="submit">Try out!</button>
+						<button class="btn btn-lg btn-primary btn-block" type="submit">Try it out!</button>
 						<a href="///help.dirigible.io" target="_blank" class="pull-right need-help">Need help?</a><span class="clearfix"></span>
 						</form>
 					</div>
