stop at breakpoint in the required source files

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.editor.orion/resources/editor.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.editor.orion/resources/editor.html
@@ -24,6 +24,7 @@
 		<style type="text/css">
 			.lineHighlight{
 				outline: 1px dotted gray;
+				background: #ffe7e7; 
 			}
 			.lineHighlightGutter{
 				background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAMAAAAoLQ9TAAAAIVBMVEX///8/n78/f58/v78/X3+/v78/P1/f379/v7+goKQAAAC7+sW9AAAANklEQVQYlbXINxIAIAzEQJ8T4f8PBlccNYO6lci/mgFxuRucThnqZ6CsSaPsNMK35xA+mey3FlHPAKrp8/+uAAAAAElFTkSuQmCC");
