--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
@@ -9,9 +9,9 @@
   <link rel="icon" href="images/favicon.png">
 
   <title>Eclipse Dirigible | Cloud Development Platform</title>
-
-  <link href="styles/default/bootstrap.min.css" rel="stylesheet">
-  <link href="styles/font-awesome.min.css" rel="stylesheet">
+				
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- end -->
   <!-- styles/app.css -->
@@ -24,7 +24,7 @@
 
   <!-- scripts/jquery.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- end -->
 
   <!-- scripts/angular.js -->
@@ -58,6 +58,7 @@
   		http://getbootstrap.com/
   		http://bootswatch.com/
   	*/
+  	/*
 	var themes = {
 	    "default": "styles/default/bootstrap.min.css",
 	    "cosmo" : "styles/cosmo/bootstrap.min.css",
@@ -81,6 +82,7 @@
 	    	});
 		});
 	});
+	*/
   </script>
 </head>
 <body>
@@ -115,6 +117,7 @@
 
         <ul id="main-menu" class="nav navbar-nav"></ul>
         <ul class="nav navbar-nav navbar-right">
+        <!--
           <li class="dropdown">
           	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
           	<ul class="dropdown-menu">
@@ -128,7 +131,7 @@
                 <li><a href="#" data-theme="yeti" class="theme-link">Yeti</a></li>
               </ul>
           </li>	
-
+			-->
           <li class="hidden-xs" ng-controller="UserCtrl">
             <a href=""><span class="fa fa-user"></span> {{ name }}&nbsp;</a>
           </li>
