--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/anonymous.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/anonymous.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-4 col-md-offset-4">
 					<h1 class="text-center login-title">Anonymous Access</h1>
-					<p>Enter a username to test Eclipse Dirigible in a shared mode instance. You can use the same username to access your projects later on.
+					<p>Enter an username to test Eclipse Dirigible in a shared mode instance. You can use the same username to access your projects later on.
 						It must be at least three characters long and must contain only Latin letters, numbers and underscore character.
 					</p>
 					<div class="account-wall">
