preview images added for scripting services templates

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/anonymous.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/anonymous.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="styles/default/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/anonymous.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 </head>
     <body>
         <div class="container">
