--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
@@ -37,6 +37,8 @@
 
 	<link rel="stylesheet" type="text/css" href="templates/develop/orion/code_edit/built-codeEdit.css" />
   	<script src="templates/develop/orion/requirejs/require.min.js"></script>
+  	
+  	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
 	<script>
 	  	/** Themes from
