Orion editor back in Registry

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/docs_explorer/web/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/docs_explorer/web/index.html
@@ -165,7 +165,7 @@
       <footer class="footer">
         <div class="container">
           <p class="text-muted">
-            Documents Explorer v.1.1. Copyright © 2010-2016 Eclipse Foundation, Inc. The Eclipse Dirigible project source code and Dirigible Labs projects are provided under the <a href="https://www.eclipse.org/legal/epl-v10.html">Eclipse Public License - v 1.0</a>
+            Documents Explorer v.1.2. Copyright &copy; 2010-2016 Eclipse Foundation, Inc. The Eclipse Dirigible project source code and Dirigible Labs projects are provided under the <a href="https://www.eclipse.org/legal/epl-v10.html">Eclipse Public License - v 1.0</a>
           </p>
         </div>
       </footer>
