--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/iam/users.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/iam/users.html
@@ -58,7 +58,7 @@
 					<tr class="selected-{{entry._selected_}}" ng-repeat="entry in data"
 						ng-click="showInfoForEntry(entry)">
 						<td>{{entry.id}}</td>
-						<td><img src="../../js/profile/avatar.js/{{entry.username}}" width="24px"></img></td>
+						<td><img ng-src="../../js/profile/avatar.js/{{entry.username}}" width="24px"></img></td>
 						<td>{{entry.username}}</td>
 						<td>{{entry.firstName}}</td>
 						<td>{{entry.lastName}}</td>
@@ -143,7 +143,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 				 		   <div style="margin-top: 30px">
-						     <img ng-show="selectedEntry" src="../../js/profile/avatar.js/{{selectedEntry.username}}" width="48px"></img>
+						     <img ng-show="selectedEntry" ng-src="../../js/profile/avatar.js/{{selectedEntry.username}}" width="48px"></img>
 				           <div>
 		       		</div>
 				</div>
