--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/profile/update.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/profile/update.html
@@ -34,7 +34,7 @@
         html, body { height: 100%; }
   </style>
 </head>
-<body style="margin-left: 20px; margin-top: 30px">
+<body style="margin-left: 20px; margin-top: 30px; background-color: #f9f9f9;">
 
 	<div id="wrap" ng-controller="NewOrEditController">
 		<div class="row">
