--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
@@ -40,36 +40,8 @@
   	
   	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
-	<script>
-	  	/** Themes from
-	  		http://getbootstrap.com/
-	  		http://bootswatch.com/
-	  	*/
+	<script src="/services/web/resources/themes/theme.js"></script>
 	
-		var themes = {
-		    "default": "styles/default/bootstrap.min.css",
-		    "cosmo" : "styles/cosmo/bootstrap.min.css",
-		    "cyborg" : "styles/cyborg/bootstrap.min.css",
-		    "flatly" : "styles/flatly/bootstrap.min.css",
-		    "journal" : "styles/journal/bootstrap.min.css",
-		    "readable" : "styles/readable/bootstrap.min.css",
-		    "simplex" : "styles/simplex/bootstrap.min.css",
-		    "yeti" : "styles/yeti/bootstrap.min.css"
-		};
-	
-		$(function() {
-			$.get( "../../theme", function( data ) {
-				var themesheet = $('<link href="'+themes[data.trim()]+'" rel="stylesheet" />');
-				themesheet.appendTo('head');
-			    $('.theme-link').click(function(){
-			    	var themeName = $(this).attr('data-theme');
-			        var themeUrl = themes[$(this).attr('data-theme')];
-			        themesheet.attr('href',themeUrl);
-			        $.get( "../../theme?name=" + themeName);
-		    	});
-			});
-		});
-	</script>
 </head>
 <body>
 	<div id="wrap">
@@ -97,23 +69,9 @@
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-		        <!-- -->
-		          <li class="dropdown">
-		          	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
-		          	<ul class="dropdown-menu">
-		                <li><a href="#" data-theme="default" class="theme-link">Default</a></li>
-		                <li><a href="#" data-theme="cosmo" class="theme-link">Cosmo</a></li>
-		                <li><a href="#" data-theme="cyborg" class="theme-link">Cyborg</a></li>
-		                <li><a href="#" data-theme="flatly" class="theme-link">Flatly</a></li>
-		                <li><a href="#" data-theme="journal" class="theme-link">Journal</a></li>
-		                <li><a href="#" data-theme="readable" class="theme-link">Readable</a></li>
-		                <li><a href="#" data-theme="simplex" class="theme-link">Simplex</a></li>
-		                <li><a href="#" data-theme="yeti" class="theme-link">Yeti</a></li>
-		              </ul>
-		          </li>	
-					
-		          <li class="hidden-xs" ng-controller="UserCtrl">
-		            <a href=""><span class="fa fa-user"></span> {{ name }}&nbsp;</a>
+				  <li class="dropdown" ng-include="'/services/web/resources/themes/themes.html'"></li>
+		          <li class="hidden-xs">
+		            <a href=""><span class="fa fa-user"></span> <span ng-include="'/services/js/user/name.js'"></span>&nbsp;</a>
 		          </li>
 		        </ul>
 			</div>
