--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/profile/avatar.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/profile/avatar.html
@@ -2,13 +2,15 @@
 <html id="ng-app" ng-app="app">
    <head>
       <title>User Profile Avatar Management</title>
-      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	  <link rel="stylesheet" href="/services/web/resources/css/forms.css">
+	  <script src="/services/web/resources/themes/theme.js"></script>
       <!-- Fix for old browsers -->
       <script src="https://nervgh.github.io/js/es5-shim.min.js"></script>
       <script src="https://nervgh.github.io/js/es5-sham.min.js"></script>
-      <script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
-      <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
       <!-- scripts/angular.js -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-resource.min.js"></script>
