--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/docs_explorer/web/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/docs_explorer/web/index.html
@@ -2,13 +2,9 @@
 <html id="ng-app" ng-app="app">
    <head>
       <title>Documents Explorer</title>
-      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
       <!-- Fix for old browsers -->
       <script src="https://nervgh.github.io/js/es5-shim.min.js"></script>
       <script src="https://nervgh.github.io/js/es5-sham.min.js"></script>
-      <script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
-      <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
       <!-- scripts/angular.js -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.17/angular-resource.min.js"></script>
@@ -24,12 +20,23 @@
          .btn-space { margin-right: 2px !important; margin-left: 2px !important;}
          html, body { height: 100%; }
       </style>
+      
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	  <link rel="stylesheet" href="/services/web/resources/css/forms.css">
+	  <script src="/services/web/resources/themes/theme.js"></script>
    </head>
    <body>
       <div class="container" ng-controller="DocServiceCtrl" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
+      	 <div class="row">
+			<div class="col-lg-12">
+		    	<h1 class="page-header">Documents Explorer</h1>
+			</div>
+		 </div>
          <div class="row">
             <div class="col-lg-11">
-               <h3>Documents Explorer</h3>
                <div class="input-group list-group">
                   <input type="text" class="form-control" placeholder="Search in folder" ng-model="search">
                   <span class="input-group-btn">
@@ -165,7 +172,7 @@
       <footer class="footer">
         <div class="container">
           <p class="text-muted">
-            Documents Explorer v.1.3. Copyright &copy; 2010-2016 Eclipse Foundation, Inc. The Eclipse Dirigible project source code and Dirigible Labs projects are provided under the <a href="https://www.eclipse.org/legal/epl-v10.html">Eclipse Public License - v 1.0</a>
+            Documents Explorer v.1.4. Copyright &copy; 2010-2017 Eclipse Foundation, Inc. The Eclipse Dirigible project source code and Dirigible Labs projects are provided under the <a href="https://www.eclipse.org/legal/epl-v10.html">Eclipse Public License - v 1.0</a>
           </p>
         </div>
       </footer>
