new themes added - wendy and baroness

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/index.html
@@ -35,8 +35,8 @@
 
 	<script src="../../js/registry/app.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="templates/develop/orion/code_edit/built-codeEdit.css" />
-  	<script src="templates/develop/orion/requirejs/require.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="orion/code_edit/built-codeEdit.css" />
+  	<script src="orion/requirejs/require.min.js"></script>
   	
   	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
@@ -45,7 +45,7 @@
 </head>
 <body>
 	<div id="wrap">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
