--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/iam/users.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/iam/users.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/services/web/resources/css/forms.css">
 	<script src="/services/web/resources/themes/theme.js"></script>
 </head>
-<body style="margin-left: 20px; margin-top: 30px">
+<body>
 
 	<div id="wrap" ng-controller="ManageController">
 		<div class="row">
