--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/profile/update.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/profile/update.html
@@ -36,19 +36,19 @@
                     <input type="hidden" class="form-control" ng-model="entity.user_id" readonly>
 					<br>
 					<label>Username</label> 
-					<input type="text" class="form-control" ng-model="entity.user_username" readonly>
+					<input type="text" class="form-control" ng-model="entity.username" readonly>
 					<br>
 					<label>Password</label> 
-					<input type="password" class="form-control" ng-model="entity.user_password" required="required">
+					<input type="password" class="form-control" ng-model="entity.password" required="required">
 					<br>
 					<label>Confirm</label> 
-					<input type="password" class="form-control" ng-model="entity.user_confirm" required="required">
+					<input type="password" class="form-control" ng-model="entity.confirm" required="required">
 					<br>
 					<label>First Name</label> 
-					<input type="text" class="form-control" ng-model="entity.user_firstname" required="required">
+					<input type="text" class="form-control" ng-model="entity.firstName" required="required">
 					<br>
 					<label>Last Name</label> 
-					<input type="text" class="form-control" ng-model="entity.user_lastname" required="required">
+					<input type="text" class="form-control" ng-model="entity.lastName" required="required">
 					<br>
 					
 					<a href='avatar.html' target="_blank"><img src="../../js/profile/avatar.js"></img></a>
