--- a/content/ide-core/src/main/resources/ide/index.html
+++ b/content/ide-core/src/main/resources/ide/index.html
@@ -57,7 +57,7 @@
 		    container.getElement().html( '<iframe src="editor.html"></iframe>' );
 		});
 		myLayout.registerComponent( 'Console', function( container, componentState ){
-		    container.getElement().html( '<iframe src="console.html"></iframe>' );
+		    container.getElement().html( '<iframe src="../ide-console/console.html"></iframe>' );
 		});
 		
 		myLayout.init();
