--- a/content/ide-editor-orion/src/main/resources/ide-editor-orion/editor.html
+++ b/content/ide-editor-orion/src/main/resources/ide-editor-orion/editor.html
@@ -4,7 +4,7 @@
         <meta name="copyright" content="Copyright (c) IBM Corporation and others 2010, 2014." >
         <meta http-equiv="Content-Language" content="en-us">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Pluggable Editor Demo</title>
+        <title>Embedded Orion Editor</title>
         <link rel="stylesheet" type="text/css" href="code_edit/built-codeEdit.css"/>
         <style>
         body {
@@ -268,18 +268,17 @@
 			}
 		
 			function saveCalled() {
-				var url = new URL(window.location);
+				var url = new __URL(window.location.href);
 				var file = url.searchParams.get('file');
 				if (file) {
 					var xhr = new XMLHttpRequest();
 					xhr.open('PUT', '/services/v3/ide/workspace' + file);
 					xhr.onreadystatechange = function() {
 						if (xhr.readyState == 4) {
-							setDirty(false);
+							console.log('file saved: ' + file);
 						}
 					}
 					var data = getText();
-					xhr.setRequestHeader("Content-Length", data.length);
 					xhr.send(data);
 				} else {
 					console.error('file parameter is not present in the URL');
@@ -299,8 +298,11 @@
 				return 'plain/text';
 			}
 		
+			var __URL = URL;
+		
 			function loadFile() {
-				var url = new URL(window.location);
+				
+				var url = new __URL(window.location.href);
 				var file = url.searchParams.get('file');
 				if (file) {
 					var xhr = new XMLHttpRequest();
