--- a/content/ide-console/src/main/resources/ide-console/console.html
+++ b/content/ide-console/src/main/resources/ide-console/console.html
@@ -6,13 +6,12 @@
 	</head>
 	<body style="background-color: black; color: #44EE44; font-family: monospace;" onload="connectToLog()">
 		<script>
-		var connectToLog = function() {
+		function connectToLog() {
 			try {
 				var logSocket = new WebSocket(((location.protocol === 'https:') ? "wss://" : "ws://") 
 						+ window.location.host + "/websockets/v3/ide/console");
 			} catch(e) {
-				document.writeln("<div style='background-color: black; font-family: monospace; color: red'>[" + new Date().toISOString() + "][error]" + e.message + "</div>");
-				
+				append("-1", "[" + new Date().toISOString() + "] [ERROR]" + e.message, "background-color: black; font-family: monospace; color: red");
 			}
 			logSocket.onmessage = function (message) {
 				var record = JSON.parse(message.data);
@@ -25,18 +24,26 @@
 				
 				var date = new Date(record.timestamp);
 				var id = record.timestamp;
-				document.writeln("<div id='" + id + "' style='background-color: black; font-family: monospace; color: " + color + "'>[" + date.toISOString() + "]" + " [" + record.level + "] " + record.message + "</div>");
+				append(id, "[" + date.toISOString() + "] [" + record.level + "] " + record.message, "background-color: black; font-family: monospace; color: " + color);
 				window.location.hash = "#" + id;
-				document.body.style.backgroundColor = "black";
 			};
 			
 			setInterval(clear, 6000000);
 		}
-		var clear = function() {
+		
+		function clear() {
 			document.body.innerHTML = '';
-			document.writeln("<div style='background-color: black; font-family: monospace; color: gray'>[" + new Date().toISOString() + "][cleared]...</div>");
-			document.body.style.backgroundColor = "black";
+			append("0", "[" + new Date().toISOString() + "]...", "background-color: black; font-family: monospace; color: gray");
 		}
+		
+		function append(id, content, style) {
+			var div = document.createElement('div');
+            div.id = id;
+			div.textContent = content;
+            div.style.cssText = style;
+			document.body.appendChild(div);
+		}
+		
 		</script>
 	</body>
 </html>
